# continual-learning

./: .envrc  .gitignore  .skyignore  CLAUDE.md  README.md  ant.py  et:q  flake.nix  pyproject.toml  wandb-metadata.json
continual_learning/: checkpoint.py  experiment.py  nn.py  types.py
continual_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
continual_learning/backprop/: AdamGnT.py  __init__.py  backprop.py  backprop_jax.py  continual_backprop.py  gnt.py  scrap.py  scrap2.py
continual_learning/config/: nn.py  optim.py
continual_learning/configs/: __init__.py  dataset.py  envs.py  logging.py  models.py  optim.py  rl.py  training.py
continual_learning/data/: __init__.py  base.py  cifar.py  imagenet.py  mnist.py
continual_learning/envs/: __init__.py  _metaworld_worker.py  ant.xml  base.py  brax_delay_wrapper.py  metaworld.py  minatar.py  slippery_ant.py  slippery_ant_v5.py  slippery_mujoco.py
continual_learning/experiments/: clean_ppo.py  ffnn_test.py  inc_mnist.py  perm_mnist.py  rl_exp.py  sbx_ppo.py  sine_exp.py
continual_learning/models/: __init__.py  cnn.py  discrete_rl.py  mlp.py  resnet.py  rl.py
continual_learning/monitoring/: metrics.py
continual_learning/nn/: __init__.py  base.py  cbp_optim.py  continual_dense.py  ffnn.py  ffnn_backup.py  networks.py  online_norm.py  online_norm_pt.py  online_norm_purejax.py  scrap.py  sine_exp.py  test_flax.py  utils.py
continual_learning/optim/: __init__.py  base.py  cbp.py  ccbp.py  ccbp_2.py  continual_backprop.py  continual_backprop_backup.py  continual_backprop_full.py  continual_backprop_half.py  continuous_continual_backprop.py  cpr.py  identity_reset.py  note  redo.py  redo_backup2.py  regrama.py  shrink_perturb.py  test.py  test_reset_weights.py  train_state.py  train_states.py  utils.py
continual_learning/plots/: ablation_plot.py  analyze - Copy.py  analyze.py  analyze.py.tmp.2481.1763668187786  backup2_analyze.py  backup3_analyze.py  backup_anlyze.py  ccbp_transform_functions.py  check_runs.py  check_sharpness_runs.py  check_thresholds.py  compare_groups.py  compare_sharpness.py  compare_thresholds.py  config.yaml  inspect_config.py  muon_leaderboard.py  new_metaworld_leaderboard.py  new_vs_old_comparison.py  plot_continual.py  plot_mt1.py  (+10 more)
continual_learning/plots - Copy/: ablation_plot.py  analyze.py  backup2_analyze.py  ccbp_transform_functions.py  config.yaml  plot_policy_collapse.py  plot_results.sh
continual_learning_2/: nn.py  types.py
docs/: bro_metaworld_implementation.md
experiments/: angel_script.sh  bbslippery_ant.py  benchmark_slippery_humanoid.py  bslippery_ant.py  continual_world_sac.py  humanoid_stand.py  inc_cifar100.py  inc_mnist.py  metaworld_mt1.py  metaworld_mt10.py  metaworld_sac.py  minatar_asterix_scratch.py  minatar_discrete_sac.py  mt1.py  perm_mnist.py  sbslippery_humanoid.py  sky_metaworld_sac.yaml  slippery_ant.py  slippery_ant_cbp_metrics.py  slippery_ant_layernorm.py  slippery_ant_tau1.py  slippery_cheetah.py  slippery_humanoid.py  slippery_humanoid_cbp_metrics.py  slippery_humanoid_layernorm.py  slippery_humanoid_tau1.py  split_cifar10.py  split_cifar100.py  split_mnist.py  td_ant.py  td_worldmt1.py
plots/: td_ant_obs4_act4_task_boundary_per_task.csv  td_ant_ramp20_info-none_per_task.csv
sky/: launch_minatar.sh  launch_minatar_single.sh  launch_minatar_slurm.sh  launch_minatar_sweep_slurm.sh  launch_minatar_sweep_vast.sh  launch_td_ant.sh  launch_td_mt1.sh  minatar.yaml  minatar_single.yaml  minatar_slurm.yaml  minatar_sweep_slurm.yaml  minatar_sweep_vast.yaml  td_ant.yaml  td_mt1.yaml
tests/: test_brax_delay_wrapper.py  test_cbp.py  test_continual_delay_wrapper.py  test_mnist.py  test_norms.py  test_reset_full_keys.py  test_sac_bro.py  test_transpose.py
(+287 files in other folders)
