[project]
name = "continual_learning"
version = "0.1.0"
description = "Codebase for continual learning"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "distrax>=0.1.5",
    "sbx-rl==0.20",
    "flax>=0.9.0",
    "gymnasium[mujoco]>=1.0.0",
    "jax[cuda12]>=0.4.34",
    "jaxtyping>=0.2.34",
    "metaworld",
    "tensorboard",
    "ploars",
    "altair",
    "vl-convert-python",
    "numpy>=2.1.2",
    "orbax-checkpoint>=0.7.0",
    "tyro>=0.8.11",
    "wandb>=0.18.5",
]

[tool.ruff]
ignore = ["F722"]
ignore-init-module-imports = true

[tool.setuptools.packages.find]
include = ["continual_learning", "continual_learning.*"]

# [tool.uv.sources]
# metaworld = { git = "https://github.com/reginald-mclean/Metaworld", rev = "release" }
