[project]
name = "continual_learning"
version = "0.1.0"
description = "Codebase for continual learning"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "distrax>=0.1.5",
    "sbx-rl==0.20",
    "flax>=0.9.0",
    "gymnasium[mujoco]>=1.0.0",
    "jaxtyping>=0.2.34",
    "metaworld",
    "tensorboard",
    "polars",
    "altair",
    "vl-convert-python",
    "numpy>=2.1.2",
    "orbax-checkpoint>=0.7.0",
    "tyro>=0.8.11",
    "wandb>=0.18.5",
    "optax @ git+https://github.com/google-deepmind/optax.git",
]

[project.optional-dependencies]
cpu = ["jax>=0.5.0"]
# https://github.com/jax-ml/jax/issues/27062
metal = ["jax<=0.5.0", "jax-metal>=0.1.0; sys_platform == 'darwin'"]
cuda12 = ["jax[cuda12]>=0.5.0"]
tpu = ["jax[tpu]>=0.5.0"]
testing = ["chex>=0.1.89", "pytest>=8.3.5"]

[tool.uv]
prerelease = "allow"
conflicts = [
    [
        { extra = "cpu" },
        { extra = "metal" },
        { extra = "cuda12" },
        { extra = "tpu" },
    ],
]

[tool.ruff]
ignore = ["F722"]
ignore-init-module-imports = true
line-length = 95

[tool.setuptools.packages.find]
include = ["continual_learning", "continual_learning.*"]

[tool.black]
line-length = 95 # Default is 88
