[project]
name = "continual_learning"
version = "0.1.0"
description = "Codebase for continual learning"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "distrax>=0.1.5",
    "flax>=0.9.0",
    "gymnasium[mujoco]>=1.0.0",
    "jaxtyping>=0.2.34",
    "metaworld>=3.0",
    "gymnasium-robotics",
    "jaxtyping>=0.2.34",
    "beartype",
    "metaworld",
    "tensorboard",
    "polars",
    "altair",
    "vl-convert-python",
    "numpy>=2.1.2",
    "orbax-checkpoint>=0.11.16",
    "tyro>=0.8.11",
    "wandb>=0.18.5",
    "optax @ git+https://github.com/google-deepmind/optax.git",
    "datasets>=3.6.0",
    "grain>=0.2.10b1",
    "dm-pix>=0.4.4",
    "brax>=0.12.4",
]

[project.optional-dependencies]
cpu = ["jax>=0.5.0"]
# https://github.com/jax-ml/jax/issues/27062
metal = ["jax<=0.5.0", "jax-metal>=0.1.0; sys_platform == 'darwin'"]
cuda12 = ["jax[cuda12]>=0.5.0"]
cuda13 = ["jax[cuda13]>=0.7.0"]
tpu = ["jax[tpu]>=0.5.0"]
testing = ["chex>=0.1.89", "pytest>=8.3.5"]
profile = ["tensorflow-cpu>=2.19.0", "tensorboard>=2.19.0"]

[tool.uv]
prerelease = "allow"
conflicts = [
    [
        { extra = "cpu" },
        { extra = "metal" },
        { extra = "cuda12" },
        { extra = "cuda13" },
        { extra = "tpu" },
    ],
]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[tool.ruff]
ignore = ["F722", "E731"]
ignore-init-module-imports = true
line-length = 95

[tool.setuptools.packages.find]
include = [
    "continual_learning",
    "continual_learning.*",
]

[tool.black]
line-length = 95 # Default is 88

[tool.pyright]
venvPath = "."
venv = ".venv"
